--- a/pom.xml
+++ b/pom.xml
@@ -92,12 +92,12 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-checkstyle-plugin</artifactId>
 					<version>3.1.2</version>
-					<configuration>
-						<configLocation>checkstyle.xml</configLocation>
-						<failOnViolation>true</failOnViolation>
-						<logViolationsToConsole>true</logViolationsToConsole>
-						<includeTestSourceDirectory>true</includeTestSourceDirectory>
-					</configuration>
+<!--					<configuration>-->
+<!--						<configLocation>checkstyle.xml</configLocation>-->
+<!--						<failOnViolation>true</failOnViolation>-->
+<!--						<logViolationsToConsole>true</logViolationsToConsole>-->
+<!--						<includeTestSourceDirectory>true</includeTestSourceDirectory>-->
+<!--					</configuration>-->
 					<executions>
 						<execution>
 							<goals>
