--- a/pom.xml
+++ b/pom.xml
@@ -92,12 +92,12 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-checkstyle-plugin</artifactId>
 					<version>3.1.2</version>
-<!--					<configuration>-->
-<!--						<configLocation>checkstyle.xml</configLocation>-->
-<!--						<failOnViolation>true</failOnViolation>-->
-<!--						<logViolationsToConsole>true</logViolationsToConsole>-->
-<!--						<includeTestSourceDirectory>true</includeTestSourceDirectory>-->
-<!--					</configuration>-->
+					<configuration>
+						<configLocation>checkstyle.xml</configLocation>
+						<failOnViolation>true</failOnViolation>
+						<logViolationsToConsole>true</logViolationsToConsole>
+						<includeTestSourceDirectory>true</includeTestSourceDirectory>
+					</configuration>
 					<executions>
 						<execution>
 							<goals>
@@ -145,6 +145,7 @@
 							</goals>
 						</execution>
 						<execution>
+
 							<id>jacoco-check</id>
 							<goals>
 								<goal>check</goal>
@@ -206,10 +207,10 @@
 			<id>check</id>
 			<build>
 				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-checkstyle-plugin</artifactId>
-					</plugin>
+<!--					<plugin>-->
+<!--						<groupId>org.apache.maven.plugins</groupId>-->
+<!--						<artifactId>maven-checkstyle-plugin</artifactId>-->
+<!--					</plugin>-->
 					<plugin>
 						<groupId>com.github.spotbugs</groupId>
 						<artifactId>spotbugs-maven-plugin</artifactId>
@@ -237,5 +238,4 @@
 			</build>
 		</profile>
 	</profiles>
-
 </project>
