--- a/pom.xml
+++ b/pom.xml
@@ -107,11 +107,11 @@
 						</execution>
 					</executions>
 					<dependencies>
-<!--						<dependency>-->
-<!--							<groupId>com.puppycrawl.tools</groupId>-->
-<!--							<artifactId>checkstyle</artifactId>-->
-<!--							<version>10.3</version>-->
-<!--						</dependency>-->
+						<dependency>
+							<groupId>com.puppycrawl.tools</groupId>
+							<artifactId>checkstyle</artifactId>
+							<version>10.3</version>
+						</dependency>
 					</dependencies>
 				</plugin>
 				<plugin>
