--- a/pom.xml
+++ b/pom.xml
@@ -88,32 +88,32 @@
 						</systemPropertyVariables>
 					</configuration>
 				</plugin>
-<!--				<plugin>-->
-<!--					<groupId>org.apache.maven.plugins</groupId>-->
-<!--					<artifactId>maven-checkstyle-plugin</artifactId>-->
-<!--					<version>3.1.2</version>-->
-<!--					<configuration>-->
-<!--						<configLocation>checkstyle.xml</configLocation>-->
-<!--						<failOnViolation>true</failOnViolation>-->
-<!--						<logViolationsToConsole>true</logViolationsToConsole>-->
-<!--						<includeTestSourceDirectory>true</includeTestSourceDirectory>-->
-<!--					</configuration>-->
-<!--					<executions>-->
-<!--						<execution>-->
-<!--							<goals>-->
-<!--								<goal>check</goal>-->
-<!--							</goals>-->
-<!--							<phase>compile</phase>-->
-<!--						</execution>-->
-<!--					</executions>-->
-<!--					<dependencies>-->
-<!--						<dependency>-->
-<!--							<groupId>com.puppycrawl.tools</groupId>-->
-<!--							<artifactId>checkstyle</artifactId>-->
-<!--							<version>10.3</version>-->
-<!--						</dependency>-->
-<!--					</dependencies>-->
-<!--				</plugin>-->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-checkstyle-plugin</artifactId>
+					<version>3.1.2</version>
+					<configuration>
+						<configLocation>checkstyle.xml</configLocation>
+						<failOnViolation>true</failOnViolation>
+						<logViolationsToConsole>true</logViolationsToConsole>
+						<includeTestSourceDirectory>true</includeTestSourceDirectory>
+					</configuration>
+					<executions>
+						<execution>
+							<goals>
+								<goal>check</goal>
+							</goals>
+							<phase>compile</phase>
+						</execution>
+					</executions>
+					<dependencies>
+						<dependency>
+							<groupId>com.puppycrawl.tools</groupId>
+							<artifactId>checkstyle</artifactId>
+							<version>10.3</version>
+						</dependency>
+					</dependencies>
+				</plugin>
 				<plugin>
 					<groupId>com.github.spotbugs</groupId>
 					<artifactId>spotbugs-maven-plugin</artifactId>
