--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-server.error.include-message=always
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.show_sql=true
+spring.jpa.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
-db.name=shareIt
-spring.datasource.url=jdbc:postgresql://localhost:5432/${db.name}
+
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
 spring.datasource.username=root
 spring.datasource.password=root
 
-spring.datasource.driver-class-name=org.postgresql.Driver
 logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
@@ -19,4 +19,5 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:shareit
 spring.datasource.username=test
 spring.datasource.password=test
+
 spring.h2.console.enabled=true
