--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.sql.init.mode=always
 
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
 logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.springframework.transaction=INFO
