--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.sql.init.mode=always
 
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
-spring.datasource.username=root
+spring.datasource.username=postgress
 spring.datasource.password=root
 
 logging.level.org.springframework.orm.jpa=INFO
