--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.sql.init.mode=always
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
 spring.datasource.username=postgress
-spring.datasource.password=root
+spring.datasource.password=postgress
 
 logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.springframework.transaction=INFO
