--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.show_sql=true
+
 spring.sql.init.mode=always
 
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
-spring.datasource.username=postgress
-spring.datasource.password=postgress
+spring.datasource.username=root
+spring.datasource.password=root
 
 logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.springframework.transaction=INFO
